Enhance Auto-Deploy Service with Monitoring Features
- Added Flask web server for monitoring project health and deployment status.
- Implemented health check scheduler to periodically update project statuses.
- Introduced notification system for health status changes and deployment results.
- Enhanced logging with timed rotating file handler and configurable retention.
- Updated configuration to support web server settings and health check parameters.
- Created monitoring UI with charts for downtime and deployment metrics.
- Added JavaScript functionality for dynamic data fetching and chart rendering.
- Updated systemd service to run within a virtual environment for better path management.
- Included new dependencies for Flask and Docker SDK in requirements.

--- a/auto-deploy.service
+++ b/auto-deploy.service
@@ -1,20 +1,20 @@
 [Unit]
-Description=Auto-Deploy Service - Automated Git Repository Deployment
-After=network-online.target docker.service
+Description=Auto-Deploy Service - Automated Git Repository Deployment (venv)
+After=network-online.target
 Wants=network-online.target
-Requires=docker.service
 
 [Service]
+# Run the auto-deploy Python from the repository virtualenv so host paths
+# (project directories) are available to the service.
 Type=simple
-ExecStart=/usr/bin/python3 /root/auto-deploy-service/auto-deploy.py
+Restart=always
+RestartSec=5
+ExecStart=/root/auto-deploy-service/.venv/bin/python /root/auto-deploy-service/auto-deploy.py /root/auto-deploy-service/config.yaml
+ExecStop=/bin/sh -c '/root/auto-deploy-service/.venv/bin/python -c "import sys; sys.exit(0)" || true'
 WorkingDirectory=/root/auto-deploy-service
 StandardOutput=journal
 StandardError=journal
 User=root
-Restart=always
-RestartSec=10
-
-# Environment
 Environment="PYTHONUNBUFFERED=1"
 
 [Install]
