--- a/config.example.yaml
+++ b/config.example.yaml
@@ -6,8 +6,16 @@ global:
   # How often to check for updates (in seconds)
   check_interval: 300  # 5 minutes
   
+  # Web UI port for the monitoring page
+  # (use a non-conflicting port if 8000 is already in use)
+  web_port: 8000
+  
   # Log directory (relative to service directory or absolute path)
   log_directory: /var/log/auto-deploy
+  log_retention_days: 7
+  
+  # History retention for monitoring charts (in days)
+  history_retention_days: 7
   
   # Enable notifications
   notifications:
@@ -34,6 +42,12 @@ projects:
       build_flags: "--build"
       up_flags: "-d"
     
+    # Health check settings (optional)
+    health:
+      url: http://localhost:3000/health
+      expected_status: 200
+      container_name: app
+    
     # Pre-deployment commands (optional)
     pre_deploy: []
     
@@ -54,6 +68,9 @@ projects:
       build_flags: "--build"
       up_flags: "-d"
     
+    health:
+      container_name: another-app
+    
     pre_deploy: []
     
     post_deploy:
@@ -70,6 +87,9 @@ projects:
 #    systemd:
 #      service_name: my-service
 #    
+#    health:
+#      script: /opt/my-service/health-check.sh
+#    
 #    pre_deploy:
 #      - pip install -r requirements.txt
 #    
@@ -85,5 +105,9 @@ projects:
 #    
 #    custom:
 #      deploy_script: /opt/custom-app/deploy.sh
+#    
+#    health:
+#      url: https://localhost/health
+#      expected_status: 200
 #    
 #    enabled: false
