Add firewall guard and dashboard authentication features
- Introduced auto-deploy-firewall.service to enforce local-only access to the dashboard.
- Updated auto-deploy.service to depend on the firewall service.
- Enhanced the Flask app to require authentication for the dashboard using credentials from a .env file.
- Added .env.example for environment variable configuration.
- Updated installation script to include firewall service setup.
- Enhanced documentation with new configuration and security guidelines.

--- a/auto-deploy.service
+++ b/auto-deploy.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Auto-Deploy Service - Automated Git Repository Deployment (venv)
-After=network-online.target
-Wants=network-online.target
+After=network-online.target auto-deploy-firewall.service
+Wants=network-online.target auto-deploy-firewall.service
 
 [Service]
 # Run the auto-deploy Python from the repository virtualenv so host paths
